--- a/app/templates/carrier/all.html
+++ b/app/templates/carrier/all.html
@@ -1,15 +1,8 @@
-{% extends "layout.html" %}
+{% extends "layout_view_fleet.html" %}
 
 {% block content %}
 
 <div class="container-fluid" id="container">
-    {#<div class="row-fluid">
-        <div class="box">
-            <div class="box-title">
-                Actions: &nbsp;&nbsp;<a href="{{ url_for('trucks.create') }}" class="btn btn-primary">New Truck</a> &nbsp;&nbsp; <a href="{{ url_for('drivers.create') }}" class="btn btn-primary">New Driver</a>
-            </div>
-        </div>#}
-    </div>
     <div class="row-fluid">
         <div class="col-sm-12">
             <div class="panel panel-default">
