--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -53,6 +53,12 @@
 								Create an account
 							</a>
 						</div>
+						<div class="new-account">
+							Forgot your Password?
+							<a href="?box=forgot" class="reset">
+								Reset Password
+							</a>
+						</div>
 					</fieldset>
 				</form>
 			</div>
