--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -77,7 +77,7 @@
 					<fieldset>
 						<div class="form-group">
 							<span class="input-icon">
-								{{ forgot_form.email() }} {#<input type="email" class="form-control" name="email" placeholder="Email">#}
+								{{ forgot_form.email(class='form-control', placeholder='Email') }} {#<input type="email" class="form-control" name="email" placeholder="Email">#}
 								<i class="fa fa-envelope"></i> </span>
 						</div>
 						<div class="form-actions">
