arrival date format update

--- a/app/templates/load/location/create.html
+++ b/app/templates/load/location/create.html
@@ -63,7 +63,7 @@
 									</label>
 									<div class="col-sm-7">
 
-										<input type="text" id="arrival_date" name="arrival_date" data-date-format="mm-dd-yyyy" data-date-viewmode="years" class="form-control date-picker" value="">
+										<input type="text" id="arrival_date" name="arrival_date" data-date-format="mm/dd/yyyy" data-date-viewmode="years" class="form-control date-picker" value="">
 									</div>
 								</div>
 							</div>
