--- a/app/templates/load/view.html
+++ b/app/templates/load/view.html
@@ -142,7 +142,7 @@
 						                    {% else %}
 						                    	<tr>
 													<td><b>Amount:</b></td>
-													<td>{{ load.carrier_cost }}</td>
+													<td>{{ load.price }}</td>
 												</tr>
 					                		{% endif %}
 						                	{% if load.truck is not none %}
