--- a/app/templates/carrier/truck/checkin.html
+++ b/app/templates/carrier/truck/checkin.html
@@ -46,33 +46,33 @@
 <!-- end: HEAD -->
 <!-- start: BODY -->
 <body class="login example1">
-      <div class="row-fluid">
-        <div class="col-sm-12">
-          <div class="panel panel-default">
-              <div class="panel-heading">
-                  <i class="fa fa-external-link-square"></i>&nbsp;Current Stop | Load #4555456
-              </div>
-              <div class="panel-body">
-                  <div class="row">
-                  <div class="col-sm-12">
-                      <p>Use the dropdown to select your current trip status</p>
-                      <form name="status_update" method="post" class="">
-                        <div class="col-sm-8">
-                              {{ form.status(class="form-control") }}
-                          </div>
-                        <div class="col-sm-4">
-                            <button type="submit" class="btn btn-blue next-step btn-block">
-                                Update Status</i>
-                              </button>
-                        </div>
-                      </form>
-                    </div>
+    <div class="row-fluid">
+      <div class="col-sm-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <i class="fa fa-external-link-square"></i>&nbsp;Current Stop | Load #4555456
                 </div>
-                <div class="row">
-                  <div class="col-sm-12">
-                    <h4>Location Details</h4>
-                    <hr />
-                    <table class="table table-condensed">
+                <div class="panel-body">
+                    <div class="row">
+                    <div class="col-sm-12">
+                        <p>Use the dropdown to select your current trip status</p>
+                        <form name="status_update" method="post" class="">
+                          <div class="col-sm-8">
+                                {{ form.status(class="form-control") }}
+                            </div>
+                          <div class="col-sm-4">
+                              <button type="submit" class="btn btn-blue next-step btn-block">
+                                  Update Status</i>
+                                </button>
+                          </div>
+                        </form>
+                      </div>
+                  </div>
+                  <hr />
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <h4>Location Details</h4>
+                  <table class="table table-condensed">
                         <thead>
                           <tr>
                               <th>Location Type</th>
@@ -85,54 +85,54 @@
                         <tbody>
                           {% if location.pickup_details is not none %}
                               <tr>
-                                <td>Pick Up</td>
-                                <td>{{ location.address.city }}, {{ location.address.state }} {{ location.address.postal_code }}</td>
-                                <td>{{ location.arrival_date }}</td>
-                                <td>{{ location.contact.name }}</td>
-                                <td>{{ location.contact.phone }}</td>
+                                  <td>Pick Up</td>
+                                  <td>{{ location.address.city }}, {{ location.address.state }} {{ location.address.postal_code }}</td>
+                                  <td>{{ location.arrival_date }}</td>
+                                  <td>{{ location.contact.name }}</td>
+                                  <td>{{ location.contact.phone }}</td>
                               </tr>
                           {% endif %}
                           {% if location.delivery_details is not none %}
                               <tr>
-                                <td>Drop Off</td>
-                                <td>{{ location.address.city }}, {{ location.address.state }} {{ location.address.postal_code }}</td>
-                                <td>{{ location.arrival_date }}</td>
-                                <td>{{ location.contact.name }}</td>
-                                <td>{{ location.contact.phone }}</td>
+                                  <td>Drop Off</td>
+                                  <td>{{ location.address.city }}, {{ location.address.state }} {{ location.address.postal_code }}</td>
+                                  <td>{{ location.arrival_date }}</td>
+                                  <td>{{ location.contact.name }}</td>
+                                  <td>{{ location.contact.phone }}</td>
                               </tr>
                           {% endif %}
                         </tbody>
                     </table>
                   </div>
                 </div>
-                {% if location.status_history.count() == 0 %}
-                  <div class="row">
+                <hr />
+                <div class="row">
                   <div class="col-sm-12">
                     <h4>Status History</h4>
-                    <hr />
-                    <table class="table table-condensed table-striped">
-                      <thead>
-                          <tr>
-                            <th>Status Date / Time</th>
-                            <th>Status</th>
-                          </tr>
-                      </thead>
-                      <tbody>
-                          {% for status in location.status_history|sort(attribute="created_on") %}
+                  {% if location.status_history.count() > 0 %}
+                      <table class="table table-bordered table-condensed table-striped">
+                        <thead>
                             <tr>
-                              <td>{{ status.created_on }}</td>
-                              <td>{{ status.status }}</td>
+                              <th>Status Date / Time</th>
+                              <th>Status</th>
                             </tr>
-                          {% endfor %}
-                      </tbody>
-                    </table>
+                        </thead>
+                        <tbody>
+                            {% for status in location.status_history|sort(attribute="created_on") %}
+                              <tr>
+                                <td>{{ status.created_on }}</td>
+                                <td>{{ status.status }}</td>
+                              </tr>
+                            {% endfor %}
+                        </tbody>
+                      </table>
+                    {% endif %}
                   </div>
-              </div>
-              {% endif %}
+                </div>
+            </div>
           </div>
         </div>
-      </div>
-      </div>
+    </div>
 
 
   <script src="{{ static('backend/plugins/jQuery-lib/2.0.3/jquery.min.js') }}"></script>
