--- a/app/templates/carrier/truck/view.html
+++ b/app/templates/carrier/truck/view.html
@@ -117,7 +117,11 @@
 	     	</div>
 	     {% endif %}
     </div>
-    <hr />
+
+    <div class="row">
+    </div>
+
+
 	<div class="row-fluid">
 		<div class="col-sm-6">
 			<div class="panel panel-default">
@@ -187,7 +191,6 @@
 			</div>
 		</div>
 	</div>
-
 	<div class="row-fluid">
 		<div class="col-sm-12">
 			<div class="panel panel-default">
