--- a/app/templates/carrier/truck/view.html
+++ b/app/templates/carrier/truck/view.html
@@ -80,7 +80,7 @@
 		        				<table class="table table-bordered table-condensed table-striped">
 		        					<thead>
 		          						<tr>
-		            						<th>Status Date / Time {{location.status_history.count() }} </th>
+		            						<th>Status Date / Time</th>
 		            						<th>Status</th>
 		          						</tr>
 		        					</thead>
