Only show future stop off locations

--- a/app/templates/carrier/truck/view.html
+++ b/app/templates/carrier/truck/view.html
@@ -196,7 +196,7 @@
 			<div class="panel panel-default">
 	    		<div class="panel-heading">
 	        		<i class="fa fa-external-link-square"></i>
-	        		Stop Offs 
+	        		Future Stop Offs 
 	    		</div>
 		    	<div class="panel-body">
 		    		<table class="table table-condensed">
