Added logo to login

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -2,7 +2,7 @@
 {% block login %}
 		<div class="login example1">
 		<div class="main-login col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
-			<div class="logo">Tron Logistics
+			<div class="logo text-center col-sm-12"><img src="{{ static('frontend/images/wht_logo-n-txt_420x100_72ppi.png') }}"></img>
 			</div>
 			{% with messages = get_flashed_messages() %}
 						{% if messages %}
