--- a/app/templates/load/view2.html
+++ b/app/templates/load/view2.html
@@ -4,7 +4,7 @@
 
 <div class="row">
 	<div class="col-sm-6">
-		<div class="panel-group accordion" id="accordion">
+		<div class="panel-group" id="accordion">
 			{% for location in load.lane.locations %}
 				<div class="panel panel-default">
 					<div class="panel-heading">
@@ -24,7 +24,7 @@
 					<div id="collapse{{ loop.index }}" class="panel-collapse collapse">
 					{% endif %}
 						<div class="panel-body">
-							<div id="wizard" class="swMain">
+							<!--<div id="wizard" class="swMain">
 								<ul>
 									<li>
 										<a href="#step-1">
@@ -79,7 +79,144 @@
 								<div id="step-4">
 								
 								</div>
-							</div>
+							</div>-->
+							<!-- RETAIN COMMENTS! --IMPORTANT! -->
+							<ol class="progtrckr" data-progtrckr-steps="6">
+								{% if location.status_history[-1].status == "In Transit" %}
+								    <li class="progtrckr-done">In Transit</li><!--
+								 --><li class="progtrckr-todo">Arrived</li><!--
+								 --><li class="progtrckr-todo">Waiting</li><!--
+								 --><li class="progtrckr-todo">
+								 		{% if location.type == "Pickup" or location.type == "Both" %}
+								 			Loading
+								 		{% else %}
+								 			Unloading
+								 		{% endif %}
+								 	</li><!--
+								 --><li class="progtrckr-todo">
+								 		{% if location.type == "Pickup" or location.type == "Both" %}
+								 			Loaded
+								 		{% else %}
+								 			Unloaded
+								 		{% endif %}
+								 	</li><!--
+								 --><li class="progtrckr-todo">Departed</li>
+								 {% elif location.status_history[-1].status == "Arrived" %}
+								 	<li class="progtrckr-done">In Transit</li><!--
+								 --><li class="progtrckr-done">Arrived</li><!--
+								 --><li class="progtrckr-todo">Waiting</li><!--
+								 --><li class="progtrckr-todo">
+								 		{% if location.type == "Pickup" or location.type == "Both" %}
+								 			Loading
+								 		{% else %}
+								 			Unloading
+								 		{% endif %}
+								 	</li><!--
+								 --><li class="progtrckr-todo">
+								 		{% if location.type == "Pickup" or location.type == "Both" %}
+								 			Loaded
+								 		{% else %}
+								 			Unloaded
+								 		{% endif %}
+								 	</li><!--
+								 --><li class="progtrckr-todo">Waiting</li>
+								 {% elif location.status_history[-1].status == "Waiting" %}
+								 	<li class="progtrckr-done">In Transit</li><!--
+								 --><li class="progtrckr-done">Arrived</li><!--
+								 --><li class="progtrckr-done">Waiting</li><!--
+								 --><li class="progtrckr-todo">
+								 		{% if location.type == "Pickup" or location.type == "Both" %}
+								 			Loading
+								 		{% else %}
+								 			Unloading
+								 		{% endif %}
+								 	</li><!--
+								 --><li class="progtrckr-todo">
+								 		{% if location.type == "Pickup" or location.type == "Both" %}
+								 			Loaded
+								 		{% else %}
+								 			Unloaded
+								 		{% endif %}
+								 	</li><!--
+								 --><li class="progtrckr-todo">Departed</li>
+								 {% elif location.status_history[-1].status == "Loading" %}
+								 	<li class="progtrckr-done">In Transit</li><!--
+								 --><li class="progtrckr-done">Arrived</li><!--
+								 --><li class="progtrckr-done">Waiting</li><!--
+								 --><li class="progtrckr-done">
+								 		{% if location.type == "Pickup" or location.type == "Both" %}
+								 			Loading
+								 		{% else %}
+								 			Unloading
+								 		{% endif %}
+								 	</li><!--
+								 --><li class="progtrckr-todo">
+								 		{% if location.type == "Pickup" or location.type == "Both" %}
+								 			Loaded
+								 		{% else %}
+								 			Unloaded
+								 		{% endif %}
+								 	</li><!--
+								 --><li class="progtrckr-todo">Departed</li>
+								 {% elif location.status_history[-1].status == "Loaded/Unloaded" %}
+								 	<li class="progtrckr-done">In Transit</li><!--
+								 --><li class="progtrckr-done">Arrived</li><!--
+								 --><li class="progtrckr-done">Waiting</li><!--
+								 --><li class="progtrckr-done">
+								 		{% if location.type == "Pickup" or location.type == "Both" %}
+								 			Loading
+								 		{% else %}
+								 			Unloading
+								 		{% endif %}
+								 	</li><!--
+								 --><li class="progtrckr-done">
+								 		{% if location.type == "Pickup" or location.type == "Both" %}
+								 			Loaded
+								 		{% else %}
+								 			Unloaded
+								 		{% endif %}
+								 	</li><!--
+								 --><li class="progtrckr-todo">Departed</li>
+								 {% elif location.status_history[-1].status == "Departed" %}
+								 	<li class="progtrckr-done">In Transit</li><!--
+								 --><li class="progtrckr-done">Arrived</li><!--
+								 --><li class="progtrckr-done">Waiting</li><!--
+								 --><li class="progtrckr-done">
+								 		{% if location.type == "Pickup" or location.type == "Both" %}
+								 			Loading
+								 		{% else %}
+								 			Unloading
+								 		{% endif %}
+								 	</li><!--
+								 --><li class="progtrckr-done">
+								 		{% if location.type == "Pickup" or location.type == "Both" %}
+								 			Loaded
+								 		{% else %}
+								 			Unloaded
+								 		{% endif %}
+								 	</li><!--
+								 --><li class="progtrckr-done">Departed</li>
+								 {% else %}
+								 	<li class="progtrckr-todo">In Transit</li><!--
+								 --><li class="progtrckr-todo">Arrived</li><!--
+								 --><li class="progtrckr-todo">Waiting</li><!--
+								 --><li class="progtrckr-todo">
+								 		{% if location.type == "Pickup" or location.type == "Both" %}
+								 			Loading
+								 		{% else %}
+								 			Unloading
+								 		{% endif %}
+								 	</li><!--
+								 --><li class="progtrckr-todo">
+								 		{% if location.type == "Pickup" or location.type == "Both" %}
+								 			Loaded
+								 		{% else %}
+								 			Unloaded
+								 		{% endif %}
+								 	</li><!--
+								 --><li class="progtrckr-todo">Departed</li>
+								 {% endif %}
+							</ol>
 							<hr />
 							<table class="table table-condensed table-hover">
 								<thead>
@@ -362,6 +499,7 @@ function ping_driver(truckID) {
 		jQuery(document).ready(function() {
 			FormWizard.init();
 		});
+
 	</script>
 
 
