--- a/app/templates/carrier/all.html
+++ b/app/templates/carrier/all.html
@@ -2,8 +2,7 @@
 
 {% block content %}
 
-<div class="container-fluid" id="container">
-    <div class="row-fluid">
+    <div class="row">
         <div class="col-sm-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -15,78 +14,26 @@
             </div>
         </div>
     </div>
-    <div class="row-fluid">
-        <div class="col-sm-6">
+    <div class="row">
+        <ul class="list-group-horizontal text-center">
+          <li class="list-group-item col-sm-2"><p class="lead">{{ unnasigned }}<br />Unnassigned</p></li>
+          <li class="list-group-item col-sm-2"><p class="lead">{{ at_origin }}<br />At Origin</p></li>
+          <li class="list-group-item col-sm-2"><p class="lead">{{ in_transit }}<br />In Transit</p></li>
+          <li class="list-group-item col-sm-2"><p class="lead">{{ at_destination }}<br />At Destination</p></li>
+          <li class="list-group-item col-sm-2"><p class="lead">{{ delivered }}<br />Delivered</p></li>
+          <li class="list-group-item col-sm-2"><p class="lead">{{ invoiced }}<br />Invoiced</p></li>
+        </ul>
+    </div>
+    <div class="row">&nbsp;</div>
+    <div class="row">
+        <div class="col-sm-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Trucks
+                    Loads
                 </div>
-                <table class="table table-striped table-bordered">
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Driver</th>
-                            <!--<th>Status</th>-->
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for truck in fleet.trucks %}
-                            <tr>
-                                {% if truck.driver is none %}
-                                        <form name="assign" action="{{ url_for('fleet.assign') }}" method="post" class="form-horizontal">
-                                {% endif %}
-                                <td><a href="{{ url_for('trucks.view', truck_id=truck.id) }}">{{ truck.name }}</a></td>
-                                <td>
-                                    {% if truck.driver is none %}
-                                            {{ form.hidden_tag() }}
-                                            {{ form.truck(value=truck.id, type='hidden') }}
-                                            {{ form.driver(class="form-control")}}
-                                            {% for error in form.driver.errors %}
-                                            <span style="color: red;">[{{ error }}]</span>
-                                        {% endfor %}
-                                    {% else %}
-                                        <a href="{{ url_for('drivers.view', driver_id=truck.driver.id)}}">{{ truck.driver.get_full_name() }}</a>
-                                    {% endif %}
-                                </td>
-                                
-                                <td>
-                                    {% if truck.driver is none %}
-                                        <input type="submit" class="btn btn-success success" value="Assign Driver" />
-                                        </form>
-                                    {% else %}
-                                        <button type="button" onclick="location.href='{{ url_for('fleet.remove', driver_id=truck.driver.id)}}'" class="btn btn-danger">Remove Driver</button>
-                                    {% endif %}
-                                </td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Unnassigned Drivers
-                </div>
-                <table class="table table-striped table-bordered">
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Phone</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for driver in fleet.drivers if driver.truck is none %}
-                            <tr>
-                                <td><a href="{{ url_for('drivers.view', driver_id=driver.id) }}">{{ driver.first_name }} {{ driver.last_name }}</a></td>
-                                <td>{{ driver.get_phone_number() }}</td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+                {% include 'partials/load_board.html' %}
             </div>
         </div>
     </div>
-</div>
+    
             {% endblock %}
